--- a/src/Layout/Choices/Card/Card.css
+++ b/src/Layout/Choices/Card/Card.css
@@ -1,5 +1,15 @@
 .ChoiceCard{
-    background-color: aqua;
     width: 100%;
-    height: 200px;
+    height: 100%;
+}
+.CardP{
+    line-height: 120px;
+    font-size: 1.7em;
+}
+.cardIcon{
+    width: 100px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+
 }
